Tue Jan 15 00:21:38 2008  Minero Aoki  <aamine@loveruby.net>

	* test/test.sh: should be executable from any directory.

Tue Jan 15 00:16:18 2008  Minero Aoki  <aamine@loveruby.net>

	* cbc: $basedir should be relative to cbc command.

Tue Jan 15 00:11:08 2008  Minero Aoki  <aamine@loveruby.net>

	* test/cbc -> ./cbc

Tue Jan 15 00:09:47 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml: new task recompile.

	* build.xml: new task jar.

	* build.xml: new task clean-build.

	* build.xml: new task dist.

	* build.properties: remove unused JJT properties.

	* test/cbc: use jar file.

	* test/Makefile

Mon Jan 14 21:48:59 2008  Minero Aoki  <aamine@loveruby.net>

	* test/cbc: provide -I option to add load path.

	* net/loveruby/cflat/compiler/Compiler.java: new option -I.

	* net/loveruby/cflat/parser/Parser.jj: allow nested library ID
	  "a.b.c".

	* net/loveruby/cflat/compiler/LibraryLoader.java: ditto.

	* import/unistd.hb: declare fork, getpid, getppid.

	* import/sys/types.hb: new file.

	* test/fork.cb: test nested library ID "sys.types".

Mon Jan 14 21:23:33 2008  Minero Aoki  <aamine@loveruby.net>

	* move *.hb files from test/ to import/.

Mon Jan 14 21:22:26 2008  Minero Aoki  <aamine@loveruby.net>

	* test/string.hb: new file.

	* test/strings.hb: new file.

	* test/stddef.hb: new file.

	* test/errno.hb: new file.

	* test/stdio.hb: add more decls.

Mon Jan 14 02:40:32 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/DefinedFunction.java: remove unused
	  method #isFunction.

	* net/loveruby/cflat/ast/UndefinedFunction.java: ditto.

Mon Jan 14 02:21:22 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: unify IntegerLiteralNode
	  and CharacterLiteralNode.

	* net/loveruby/cflat/compiler/Visitor.java: ditto.

	* net/loveruby/cflat/compiler/CodeGenerator.java: ditto.

	* net/loveruby/cflat/compiler/TypeResolver.java: ditto.

	* net/loveruby/cflat/ast/ASTVisitor.java: ditto.
