@@ -1,14 +1,15 @@
-CBC = ./cbc
 ANT = jant
 
 test:
 	./test.sh
 
+compile:
+	cd .. && $(ANT) compile
+
 recompile:
 	cd .. && $(ANT) recompile
 
-comptest: recompile
-	./test.sh
+comptest: recompile test
 
 clean:
 	rm -f *.s *.o `svn pget svn:ignore .`
